tests/typing/fail/record_sym_keys_fail.rb

h = {:x => "hi", :y => 2}

h[:x] + 2
h[:y].concat "bye"
